--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 twitter:
   username               : &twitter "cloudndigital"
 facebook:
-  username               : &facebook "michaelrose"
+  username               : &facebook "cloudndigital"
   app_id                 :
   publisher              :
 og_image                 : "site-logo.png" # Open Graph/Twitter default site image
