--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,13 +27,13 @@ main:
   - title: "About"
     url: /about/
 
-  - title: "Sample Posts"
+  - title: "Solutions"
     url: /year-archive/
 
-  - title: "Sample Collections"
+  - title: "Industries"
     url: /collection-archive/
 
-  - title: "Terms &amp; Privacy Policy"
+  - title: "Blogs"
     url: /terms/
 
 
