--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Cloud & Digital"
 title_separator          : "-"
-name                     : &name "Cloud & Digital"
+name                     : &name "Unleash Digital Transformation"
 description              : &description "A flexible Jekyll theme for your blog or site with a minimalist aesthetic."
 url                      : https://cloudndigital.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/home" # the subpath of your site, e.g. "/blog"
@@ -81,7 +81,7 @@ analytics:
 author:
   name             : *name
   avatar           : "cnd-logo-160x160.jpg"
-  bio              : "cloud native, block chain, and digital transformation"
+  bio              : "cloud native, block chain, oepn api, and digital transformation"
   location         : "Seoul, South Korea"
   email            :
   uri              : "https://cloudndigital.com"
