--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ main:
   - title: "Industries"
     url: /terms/
 
-  - title: "Blogs"
+  - title: "Posts"
     url: /year-archive/
     
   - title: "About Us"
